# dummy_tg

./: .gitignore  README.md  config.yaml.example  pyproject.toml
src/: main.py
